--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <meta http-equiv="refresh" content="0; url=http://deoliveiralucas.net/">
 </head>
 <body>
-    <p>My personal web site: <a href="http://deoliveiralucas.net/">deoliveiralucas.net</a></p>
+    <p><a href="http://deoliveiralucas.net/">Redirecting to deoliveiralucas.net...</a></p>
 </body>
 </html>
