--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <meta http-equiv="refresh" content="0; url=https://lucasxciv.dev/">
 </head>
 <body>
-<p><a href="https://lucasxciv.dev/">Redirecting to lucasxciv.dev...</a></p>
+<p><a href="https://lucasxciv.dev/">Redirecting to https://lucasxciv.dev/</a></p>
 </body>
 </html>
